unpackaged/main/default/objects/appirio_core__Currency_Exchange_Rate__c/appirio_core__Currency_Exchange_Rate__c.object-meta.xml
<CustomObject>
    <customHelpPage>appirio_core__CurrencyHelp</customHelpPage>
    <description>This core object is only used if you manage dated exchange rates using FinancialForce PSA instead of Salesforce advanced currency management. Defines the exchange rates--against the designated corporate currency--for each of your currencies. You can enter effective (start) and expiration (end) dates to define a dated exchange rate that is only effective over a certain time period.</description>
    <label>Currency Exchange Rate</label>
    <nameField>
        <displayFormat>CER-{0}</displayFormat>
        <label>Currency Exchange Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Exchange Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>