unpackaged/main/default/objects/appirio_core__Currency_Exchange_Rate__c/fields/appirio_core__Currency__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Currency__c</fullName>
    <description>This lookup references the Currency record for which the dated currency exchange rate applies.  The rate is always defined as how much of the referenced Currency is equal to 1 (one) unit of the Coprorate Currency on the specified effective date.</description>
    <inlineHelpText>This lookup references the Currency record for which the dated currency exchange rate applies.  The rate is always defined as how much of the referenced Currency is equal to 1 (one) unit of the Coprorate Currency on the specified effective date.</inlineHelpText>
    <label>Currency</label>
    <referenceTo>appirio_core__Currency__c</referenceTo>
    <relationshipLabel>Dated Exchange Rates</relationshipLabel>
    <relationshipName>Currency_Exchange_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>