unpackaged/main/default/objects/appirio_core__Currency_Exchange_Rate__c/fields/appirio_core__Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Currency_Code__c</fullName>
    <formula>appirio_core__Currency__r.appirio_core__Currency_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Code</label>
    <type>Text</type>
</CustomField>