unpackaged/main/default/objects/appirio_core__Currency_Exchange_Rate__c/fields/appirio_core__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Expiration_Date__c</fullName>
    <description>Specifies the date on which this Exchange Rate expires, if any.  The Exchange Rate is valid until the day before the Expiration Date, or never expires if blank.</description>
    <formula>appirio_core__Next_Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specifies the date on which this Exchange Rate expires, if any.  The Exchange Rate is valid until the day before the Expiration Date, or never expires if blank.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>