unpackaged/main/default/objects/appirio_core__Currency_Exchange_Rate__c/fields/appirio_core__Is_Void__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Is_Void__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that this currency exchange rate record is invalid and is not to be used</description>
    <inlineHelpText>If checked, indicates that this currency exchange rate record is invalid and is not to be used</inlineHelpText>
    <label>Is Void</label>
    <type>Checkbox</type>
</CustomField>