unpackaged/main/default/objects/appirio_core__Currency_Exchange_Rate__c/fields/appirio_core__Next_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Next_Effective_Date__c</fullName>
    <description>Defines the effective date of the subsequent exchange rate for the currency if any.  It will be blank for the most recent rate.  This field should be set automatically by the system.</description>
    <inlineHelpText>Defines the effective date of the subsequent exchange rate for the currency if any.  It will be blank for the most recent rate.  This field should be set automatically by the system.</inlineHelpText>
    <label>Next Effective Date</label>
    <type>Date</type>
</CustomField>