unpackaged/main/default/objects/appirio_core__Currency_Exchange_Rate__c/fields/appirio_core__Rate__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Rate__c</fullName>
    <description>Defines the numeric value of the dated exchange rate between the referenced Currency and the Corporate Currency for the org.</description>
    <inlineHelpText>Defines the numeric value of the dated exchange rate between the referenced Currency and the Corporate Currency for the org.</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>