unpackaged/main/default/objects/appirio_core__Currency_Exchange_Rate__c/listViews/appirio_core__All.listView-meta.xml
<ListView>
    <fullName>appirio_core__All</fullName>
    <columns>NAME</columns>
    <columns>appirio_core__Currency__c</columns>
    <columns>appirio_core__Currency_Code__c</columns>
    <columns>appirio_core__Rate__c</columns>
    <columns>appirio_core__Effective_Date__c</columns>
    <columns>appirio_core__Expiration_Date__c</columns>
    <columns>appirio_core__Is_Test__c</columns>
    <columns>appirio_core__Is_Void__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>